# TP_Patterns

./: Architecture.md  CMakeLists.txt  README.md  constants.h  main.cpp
Fighting/: Fighter.cpp  Fighter.h
Fighting/FightingLogic/: FightingMode.cpp  FightingMode.h
Game/: Field.cpp  Field.h  Game.cpp  Game.h
Game/Commands/: AttackCommand.cpp  AttackCommand.h  Command.h  CreateSniperCommand.cpp  CreateSniperCommand.h  CreateSoldierCommand.cpp  CreateSoldierCommand.h  MoveLeftCommand.cpp  MoveLeftCommand.h  MoveRightCommand.cpp  MoveRightCommand.h
UnitGroups/: Army.cpp  Army.h  AttackMode.cpp  CompositeGroup.cpp  CompositeGroup.h  DefenceMode.cpp  DefenceMode.h  Economy.cpp  Economy.h  FightingMode.h  FightingSkill.cpp  FightingSkill.h  Squad.cpp  Squad.h  UnitLeaf.cpp  UnitLeaf.h  UnitsGroup.cpp  UnitsGroup.h
UnitGroups/FightingLogic/: AttackMode.h  FightingLogic.cpp  FightingLogic.h  FightingMode.h
Units/: GermanMachineGunner.cpp  GermanMachineGunner.h  GermanSniper.cpp  GermanSniper.h  GermanSoldier.cpp  GermanSoldier.h  MachineGunner.cpp  MachineGunner.h  RussianMachineGunner.cpp  RussianMachineGunner.h  RussianSniper.cpp  RussianSniper.h  RussianSoldier.cpp  RussianSoldier.h  Sniper.cpp  Sniper.h  Soldier.cpp  Soldier.h  Unit.cpp  Unit.h
UnitsFactory/: GermanUnitsFactory.cpp  GermanUnitsFactory.h  RussianUnitsFactory.cpp  RussianUnitsFactory.h  UnitsFactory.cpp  UnitsFactory.h
